# cgo_test

./: .gitignore  test
src/cpp/: CMakeLists.txt  build.sh  hello.cpp  hello.h  main.cpp
src/go/: README.md  build_and_run.sh  go.mod  hello_wrapper.go  hello_wrapper_test.go  main.go
